--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/styled-components": "^5.1.34",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -15,6 +16,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.0",
+    "styled-components": "^6.1.15",
+    "styled-system": "^5.1.5",
     "typescript": "^5.1.6"
   },
   "scripts": {
