--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,14 +3,15 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^8.0.3"
+        "dotenv": "^16.4.7",
+        "express": "^4.18.2",
+        "mongoose": "^8.0.3"
     },
     "devDependencies": {
-      "nodemon": "^3.0.2"
+        "nodemon": "^3.0.2"
     }
-  }
+}
